--- a/Assessment_template.tex
+++ b/Assessment_template.tex
@@ -142,17 +142,13 @@ west coast in 2017}
 
 
 Chantel R. Wetzel\textsuperscript{1}\\
-Kelli Johnson\textsuperscript{2}\\
-Lee Cronin-Fine\textsuperscript{3}\\
+Kelli Johnson\textsuperscript{1}\\
+Lee Cronin-Fine\textsuperscript{2}\\
 
 \vspace{.5cm}
 
 \small
 \textsuperscript{1}Northwest Fisheries Science Center, U.S. Department of Commerce, National Oceanic and Atmospheric Administration, National Marine Fisheries Service, 2725 Montlake Boulevard East, Seattle, Washington 98112\\
-
-\vspace{.3cm}
-
-\textsuperscript{2}Northwest Fisheries Science Center, U.S. Department of Commerce, National Oceanic and Atmospheric Administration, National Marine Fisheries Service, 2725 Montlake Boulevard East, Seattle, Washington 98112\\
 
 \vspace{.3cm}
 
@@ -198,67 +194,76 @@ represent any agency determination or policy.
 \subsection*{Stock}\label{stock}
 \addcontentsline{toc}{subsection}{Stock}
 
-\hl{Include: species/area, including an evaluation of any potential biological basis 
-for regional management.}
-
 This assessment reports the status of the Pacific ocean perch
-(\emph{Sebastes alutus}) resource in U.S. waters off the coast of the
-California, Oregon, and Washington using data through 2017. Etc\ldots{}
+(\emph{Sebastes alutus}) speciess off rockfish off the U.S. West Coast
+from Northern California to the Canadian Border using data through 2017.
+Pacific ocean perch are most abundant in the Gulf of Alaska and have
+observed off of Japan, in the Bering Sea, and south to Baja California,
+although they are sparse south of Oregon and rare in southern
+California. \hl{Composition data indicate that
+good recruitment years coincide in Oregon and Washington.} To date, no
+significant genetic differences have been found in the range covered by
+this assessment.
 
 \subsection*{Catches}\label{catches}
 \addcontentsline{toc}{subsection}{Catches}
 
-\hl{Include: trends and current levels-include table for last ten years and graph with 
-long term data}
-
-Catch figure(s) with fleets: (Figures
-\ref{fig:Exec_catch1}-\ref{fig:Exec_catch3})\\
-Catch table: (Table \ref{tab:Exec_catch})
-
-\FloatBarrier
-
-\begin{figure}
-\centering
-\includegraphics{Assessment_template_files/figure-latex/unnamed-chunk-2-1.pdf}
-\caption{Pacific ocean perch landings in \ldots{}..
-\label{fig:Exec_catch1}}
-\end{figure}
-
-\FloatBarrier
-
-\begin{figure}
-\centering
-\includegraphics{r4ss/plots_mod1/catch1 landings.png}
-\caption{Landings history of Pacific ocean perch in the Base model.
-\label{fig:r4ss_catches}}
-\end{figure}
+The first year that harvest of Pacific ocean perch exceeded 1 mt off the
+U.S. West Coast first occured in 1929. Catches ramped up in the 1940s
+with large removals in Washington waters. During the 1950s the removals
+primarly occured in Oregon waters with catches from Washington declining
+following the 1940s. The largest removals in 1966-1968 were largely a
+result of harvest by foreing vessels. The fishery proceed with more
+moderate removals ranging between 1,200 to 2,600 metric tons per year
+between 1969 to 1980. Removals generally decined from 1981 to 1994 to
+between 1,000 and 1,700 metric tons per year. Pacific ocean perch was
+declared overfished in 1999 resulting in large reduction in harvest in
+recent years since the declaration.
 
 \begin{table}[ht]
 \centering
-\caption{Recent Pacific ocean perch landings (mt) by 
+\caption{Landings (mt) for the past 10 years forPacific ocean perch by 
                                             fleet.} 
 \label{tab:Exec_catch}
 \begin{tabular}{l>{\centering}p{0.7in}>{\centering}p{0.7in}>{\centering}p{0.7in}>{\centering}p{0.7in}>{\centering}p{0.7in}>{\centering}p{0.7in}}
   \hline
 Year & California & Oregon & Washington & At-sea-hake & Survey & Total Catch \\ 
   \hline
-\hline
+2007 & 0.15 & 83.65 & 45.11 & 4.05 & 0.58 & 133.54 \\ 
+  2008 & 0.39 & 58.64 & 16.61 & 15.93 & 0.80 & 92.37 \\ 
+  2009 & 0.92 & 58.75 & 33.22 & 1.56 & 2.70 & 97.14 \\ 
+  2010 & 0.14 & 58.00 & 22.29 & 16.87 & 1.62 & 98.92 \\ 
+  2011 & 0.12 & 30.26 & 19.57 & 9.17 & 1.19 & 60.31 \\ 
+  2012 & 0.18 & 30.41 & 21.79 & 4.52 & 1.59 & 58.49 \\ 
+  2013 & 0.08 & 34.86 & 14.54 & 5.41 & 1.71 & 56.60 \\ 
+  2014 & 0.18 & 30.64 & 9.55 & 3.92 & 0.56 & 44.85 \\ 
+  2015 & 0.12 & 38.12 & 11.41 & 8.71 & 1.51 & 59.87 \\ 
+  2016 & 0.19 & 34.15 & 12.23 & 10.30 & 0.00 & 56.86 \\ 
+   \hline
 \end{tabular}
 \end{table}
 
 \FloatBarrier
 
-\newpage
+\begin{figure}
+\centering
+\includegraphics{Assessment_template_files/figure-latex/unnamed-chunk-3-1.pdf}
+\caption{Landings of Pacific ocean perch for California, Oregon,
+Washington, the foriegn fishery (1966-1976), at-sea-hake fishery, and
+fishery independent surveys. \label{fig:Exec_catch1}}
+\end{figure}
 
 \subsection*{Data and Assessment}\label{data-and-assessment}
 \addcontentsline{toc}{subsection}{Data and Assessment}
 
-\hl{Include: date of last assessment, type of assessment model, data available, new 
-information, and information lacking.}
-
-Pacific ocean perch was assessed\ldots{}. This assessment uses the
-newest version of Stock Synthesis (3.30). The model begins in 1892, and
-assumes the stock was at an unfished equilibrium that year.
+This a new full assessment for Pacific ocean perch which was last
+assessed in 2011. In this assessment, all aspects of the model including
+catches, data, and modelling assumptions were re-evaluated as much as
+possible. The assessment was conducted using the length- and
+age-structured modeling software Stock Synthesis (version 3.30). The
+coastwide population was modeled assuming separate growth and mortality
+parameters for each sex (a two-sex model) from 1892 to 2017, and
+forecasted beyond 2017.
 
 \FloatBarrier
 
@@ -1507,6 +1512,259 @@ undergoing review.
 
 \section{Tables}\label{tables}
 
+\begin{table}[ht]
+\centering
+\caption{Summary of commercial fishery length samples used in the stock assessment.} 
+\label{tab:Comm_Lengths}
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
+  \hline
+Year & Trips & Fish & Sample Size \\ 
+  \hline
+1966 & 1 & 238 & 7 \\ 
+  1967 & 5 & 1020 & 35 \\ 
+  1968 & 3 & 912 & 21 \\ 
+  1969 & 4 & 1213 & 28 \\ 
+  1970 & 13 & 1830 & 92 \\ 
+  1971 & 22 & 4698 & 155 \\ 
+  1972 & 23 & 4561 & 162 \\ 
+  1973 & 17 & 4134 & 120 \\ 
+  1974 & 20 & 4806 & 141 \\ 
+  1975 & 19 & 3637 & 134 \\ 
+  1976 & 21 & 3677 & 148 \\ 
+  1977 & 32 & 4846 & 226 \\ 
+  1978 & 52 & 7715 & 367 \\ 
+  1979 & 34 & 3414 & 240 \\ 
+  1980 & 55 & 5426 & 388 \\ 
+  1981 & 40 & 3921 & 282 \\ 
+  1982 & 48 & 4824 & 339 \\ 
+  1983 & 39 & 3944 & 275 \\ 
+  1984 & 31 & 3103 & 219 \\ 
+  1985 & 45 & 4509 & 318 \\ 
+  1986 & 40 & 4005 & 282 \\ 
+  1987 & 43 & 3056 & 304 \\ 
+  1988 & 9 & 602 & 64 \\ 
+  1989 & 16 & 798 & 113 \\ 
+  1990 & 12 & 599 & 85 \\ 
+  1991 & 8 & 216 & 38 \\ 
+  1994 & 43 & 2608 & 304 \\ 
+  1995 & 49 & 3161 & 346 \\ 
+  1996 & 64 & 3085 & 452 \\ 
+  1997 & 76 & 3570 & 537 \\ 
+  1998 & 56 & 3450 & 395 \\ 
+  1999 & 58 & 2812 & 409 \\ 
+  2000 & 49 & 2004 & 326 \\ 
+  2001 & 59 & 1696 & 293 \\ 
+  2002 & 50 & 1666 & 280 \\ 
+  2003 & 68 & 1685 & 301 \\ 
+  2004 & 53 & 1202 & 219 \\ 
+  2005 & 50 & 1270 & 225 \\ 
+  2006 & 59 & 1486 & 264 \\ 
+  2007 & 81 & 2248 & 391 \\ 
+  2008 & 101 & 3058 & 523 \\ 
+  2009 & 108 & 3208 & 551 \\ 
+  2010 & 131 & 2829 & 521 \\ 
+  2011 & 100 & 1944 & 368 \\ 
+  2012 & 97 & 1873 & 355 \\ 
+  2013 & 117 & 2168 & 416 \\ 
+  2014 & 140 & 2850 & 533 \\ 
+  2015 & 107 & 2459 & 446 \\ 
+  2016 & 92 & 1271 & 267 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\caption{Summary of Pacific ocean perch survey length samples used in the stock assessment.} 
+\label{tab:Comm_Lengths}
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
+  \hline
+Year & Tows & Fish & Sample Size \\ 
+  \hline
+1979 & 125 & 2375 & 303 \\ 
+  1985 & 126 & 2558 & 306 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\caption{Summary of Triennial survey length samples used in the stock assessment.} 
+\label{tab:Comm_Lengths}
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
+  \hline
+Year & Tows & Fish & Sample Size \\ 
+  \hline
+1980 & 18 & 1315 & 43 \\ 
+  1983 & 40 & 2820 & 97 \\ 
+  1986 & 17 & 877 & 41 \\ 
+  1989 & 42 & 1851 & 102 \\ 
+  1992 & 33 & 1182 & 80 \\ 
+  1995 & 71 & 1136 & 172 \\ 
+  1998 & 81 & 1482 & 196 \\ 
+  2001 & 74 & 669 & 179 \\ 
+  2004 & 63 & 1240 & 153 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\caption{Summary of AFSC slope survey length samples used in the stock assessment.} 
+\label{tab:Comm_Lengths}
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
+  \hline
+Year & Tows & Fish & Sample Size \\ 
+  \hline
+1996 & 48 & 1396 & 116 \\ 
+  1997 & 21 & 347 & 51 \\ 
+  1999 & 21 & 562 & 51 \\ 
+  2000 & 19 & 353 & 46 \\ 
+  2001 & 23 & 390 & 55 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\caption{Summary of NWFSC slope survey length samples used in the stock assessment.} 
+\label{tab:Comm_Lengths}
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
+  \hline
+Year & Tows & Fish & Sample Size \\ 
+  \hline
+2001 & 18 & 27 & 43 \\ 
+  2002 & 24 & 54 & 58 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\caption{Summary of NWFSC shelf/slope survey length samples used in the stock assessment.} 
+\label{tab:Comm_Lengths}
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
+  \hline
+Year & Tows & Fish & Sample Size \\ 
+  \hline
+2003 & 46 & 80 & 111 \\ 
+  2004 & 34 & 56 & 82 \\ 
+  2005 & 38 & 81 & 92 \\ 
+  2006 & 33 & 73 & 80 \\ 
+  2007 & 50 & 74 & 121 \\ 
+  2008 & 39 & 75 & 94 \\ 
+  2009 & 46 & 61 & 111 \\ 
+  2010 & 53 & 73 & 128 \\ 
+  2011 & 53 & 72 & 128 \\ 
+  2012 & 50 & 79 & 121 \\ 
+  2013 & 45 & 76 & 109 \\ 
+  2014 & 52 & 77 & 126 \\ 
+  2015 & 69 & 67 & 167 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\caption{Summary of commercial fishery age samples used in the stock assessment.} 
+\label{tab:Comm_Lengths}
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
+  \hline
+Year & Trips & Fish & Sample Size \\ 
+  \hline
+1981 & 11 & 1027 & 78 \\ 
+  1982 & 40 & 2776 & 282 \\ 
+  1983 & 33 & 3320 & 233 \\ 
+  1984 & 27 & 2625 & 191 \\ 
+  1985 & 21 & 2097 & 148 \\ 
+  1986 & 17 & 1696 & 120 \\ 
+  1987 & 24 & 1196 & 169 \\ 
+  1988 & 4 & 200 & 28 \\ 
+  1994 & 8 & 238 & 41 \\ 
+  1999 & 18 & 863 & 127 \\ 
+  2000 & 14 & 677 & 99 \\ 
+  2001 & 40 & 1349 & 226 \\ 
+  2002 & 38 & 1414 & 233 \\ 
+  2003 & 41 & 1333 & 225 \\ 
+  2004 & 30 & 854 & 148 \\ 
+  2005 & 37 & 1018 & 177 \\ 
+  2006 & 49 & 1259 & 223 \\ 
+  2007 & 63 & 1825 & 315 \\ 
+  2008 & 44 & 1129 & 200 \\ 
+  2009 & 76 & 1549 & 290 \\ 
+  2010 & 53 & 1258 & 227 \\ 
+  2011 & 86 & 1251 & 259 \\ 
+  2012 & 7 & 331 & 49 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\caption{Summary of Pacific ocean perch survey age samples used in the stock assessment.} 
+\label{tab:Comm_Lengths}
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
+  \hline
+Year & Tows & Fish & Sample Size \\ 
+  \hline
+1985 & 29 & 1635 & 70 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\caption{Summary of Triennial survey age samples used in the stock assessment.} 
+\label{tab:Comm_Lengths}
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
+  \hline
+Year & Tows & Fish & Sample Size \\ 
+  \hline
+1989 & 15 & 577 & 36 \\ 
+  1992 & 10 & 373 & 24 \\ 
+  1995 & 12 & 275 & 29 \\ 
+  1998 & 28 & 352 & 68 \\ 
+  2001 & 43 & 342 & 104 \\ 
+  2004 & 57 & 416 & 138 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\caption{Summary of NWFSC slope survey age samples used in the stock assessment.} 
+\label{tab:Comm_Lengths}
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
+  \hline
+Year & Tows & Fish & Sample Size \\ 
+  \hline
+2001 & 17 & 125 & 41 \\ 
+  2002 & 24 & 216 & 58 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\caption{Summary of NWFSC shelf/slope survey age samples used in the stock assessment.} 
+\label{tab:Comm_Lengths}
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
+  \hline
+Year & Tows & Fish & Sample Size \\ 
+  \hline
+2003 & 45 & 265 & 109 \\ 
+  2004 & 34 & 149 & 82 \\ 
+  2005 & 38 & 192 & 92 \\ 
+  2006 & 33 & 170 & 80 \\ 
+  2007 & 50 & 228 & 121 \\ 
+  2008 & 39 & 218 & 94 \\ 
+  2009 & 45 & 190 & 109 \\ 
+  2010 & 53 & 292 & 128 \\ 
+  2011 & 53 & 258 & 128 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
 \FloatBarrier
 
 \FloatBarrier
@@ -1920,7 +2178,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Fishery.png}
 \caption{Francis data weighting method TA1.8 Fishery Suggested sample
 size adjustment (with 95\% interval) for len data from Fishery: 0.2517
-(0.1563\_0.5907)
+(0.1618\_0.5986)
 \label{fig:mod1_4_comp_lenfit_data_weighting_TA1.8_Fishery}}
 \end{figure}
 
@@ -1952,7 +2210,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Fishery.png}
 \caption{Francis data weighting method TA1.8 Fishery Suggested sample
 size adjustment (with 95\% interval) for len data from Fishery: 0.2517
-(0.1586\_0.5848)
+(0.1521\_0.5781)
 \label{fig:mod1_8_comp_lenfit_data_weighting_TA1.8_Fishery}}
 \end{figure}
 
